add img page Home file page home

--- a/font_end/style.css
+++ b/font_end/style.css
@@ -1,4 +1,10 @@
-#navbar{
-    background-color: #fff;
+@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+
+* {
+    font-family: 'Kanit', sans-serif;
 }
 
+
+/* #navbar{
+    background-color: #ceb8b8;
+} */
